# codex-bootstrap

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  bootstrap  bootstrap.ps1
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.codex-bootstrap/: checks.json
.github/workflows/: ci.yml  pages.yml
environments/supermeta/: AGENTS.md  README.md
scripts/: agent-beads  agent-beads.ps1  agent-beans  agent-beans.ps1  agent-bootstrap  agent-bootstrap.ps1  agent-coord  agent-coord.ps1  agent-dotnet  agent-dotnet.ps1  agent-fix-loop  agent-fix-loop.ps1  agent-gradle  agent-gradle.ps1  agent-nag  agent-nag.ps1  agent-smart-check  agent-smart-check.ps1  agent-task  agent-task.ps1  supermeta-cache  supermeta-cache.ps1
site/: index.html  install.ps1  install.sh
templates/csharp-dotnet-cli/: .editorconfig  .gitignore  AGENTS.md  CsharpDotnetCli.slnx  Directory.Build.props  README.md  bootstrap-template.json  supermeta-rules.json
templates/existing-repo-control/: .gitignore  AGENTS.md  README.md  bootstrap-template.json
templates/go-cli/: .gitignore  AGENTS.md  README.md  bootstrap-template.json  cli.go  cli_test.go  go.mod  logging.go  logging_test.go  main.go  supermeta-rules.json
templates/python-uv-cli/: .gitignore  AGENTS.md  README.md  bootstrap-template.json  pyproject.toml  supermeta-rules.json
templates/python-uv-cli/scripts/: check  check.ps1
templates/python-uv-cli/src/python_uv_cli/: __init__.py  __main__.py  cli.py  logging_config.py
templates/python-uv-cli/tests/: test_cli.py
tools/: test_discovery_test.py
(+143 files in other folders)
