[project]
name = "python-uv-cli"
version = "0.1.0"
description = "A compact Python uv command-line starter."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
python-uv-cli = "python_uv_cli.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.18.0,<1.20.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.14.0,<0.15.0",
]

[build-system]
requires = ["setuptools>=80.0.0,<81.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
mypy_path = "src"
files = ["src", "tests"]
